<resources>
    <string name="app_name">DoctorAppointmentSystem</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="name_surname">Name Surname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Date of birth (year)</string>
    <string name="signup">Sign up</string>
    <string name="please_select_gender">please select gender</string>
    <string name="login">Login</string>
    <string name="hospital">Hospital</string>
    <string name="clinic">Clinic</string>
    <string name="address">Address</string>
    <string name="create_a_doctor_account">create a doctor account?</string>
    <string name="create_a_user_account">create a user account?</string>
    <string name="show">show</string>
    <string name="see_profile">see profile</string>
    <string name="please_select_an_hour">please select an hour</string>
    <string name="pick_date">pick date</string>
    <string name="address_with_colon">Address:</string>
    <string name="phone_number">phone number:</string>
    <string name="current_appointments">Current Appointments</string>
</resources>